# infernal-engine

./: .gitignore  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml  requirements_dev.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  test.yml
docs/: index.md  installation.md  usage.md
src/infernal_engine/: __init__.py  main.py
src/infernal_engine/template_files/: animation_template.lsx
src/infernal_engine/utils/: characters.py  convert_mocap.py  dialog.py  handles.py  hashing.py  info.py  parsing.py  paths.py  scene.py  settings.py  speakers.py  visuals.py  write_animation.py
tests/: __init__.py  test_infernal_engine.py
