[project]
name = "infernal-engine"
version = "0.0.0"
description = "A tool for converting Baldur's Gate 3 mocap animations into timeline animations."
readme = "README.md"
authors = [
  {name = "Curious Cactus"}
]
maintainers = [
  {name = "Curious Cactus"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/CuriousCactus/infernal_engine/issues"
changelog = "https://github.com/CuriousCactus/infernal_engine/blob/master/changelog.md"
homepage = "https://github.com/CuriousCactus/infernal_engine"

[project.scripts]
infernal_engine = "infernal_engine.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
